--- a/FlickIt/Podfile
+++ b/FlickIt/Podfile
@@ -1,8 +1,9 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '8.0'
+platform :ios, '10.0'
 # Uncomment this line if you're using Swift
 # use_frameworks!
 pod 'Google/Analytics'
+pod 'Google-Mobile-Ads-SDK'
 
 target 'FlickIt' do
 
