--- a/FlickIt/Podfile
+++ b/FlickIt/Podfile
@@ -1,9 +1,12 @@
 # Uncomment this line to define a global platform for your project
-platform :ios, '10.0'
+platform :ios, '11.0'
 # Uncomment this line if you're using Swift
-# use_frameworks!
+use_frameworks!
 pod 'Google/Analytics'
 pod 'Google-Mobile-Ads-SDK'
+pod 'FBSDKCoreKit'
+pod 'FBSDKLoginKit'
+pod 'FBSDKShareKit'
 
 target 'FlickIt' do
 
